@@ -23,4 +23,4 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  * Sets version information.
  */
 $moduleVersion = '1.6.05';
-$coreVersion = '23.0.00';
+$coreVersion = '29.0.00';
